--- a/Tesis/discusion.tex
+++ b/Tesis/discusion.tex
@@ -29,15 +29,14 @@ Una debilidad identificada es que la prueba académica no logró detectar difere
 
 2) Idealmente, tomar una muestra aleatoria de estudiantes que estén cursando Algoritmos y Estructuras de Datos y mostrarles el videojuego. Posteriormente, realizar un examen y medir las diferencias entre el grupo que probó el videojuego y el grupo que no lo hizo. Sin embargo, esto requiere apoyo institucional y garantizar la inclusión de la materia de grafos en el curso.
 
+Un aspecto a mejorar es que el videojuego no tiene componentes sociales, tales como multijugador, ya sea de forma competitiva o cooperativa. Estos elementos se descartaron debido a la dificultad para aplicar pruebas de usuario multijugador y la complejidad de agregar cooperatividad o competitividad a nivel de diseño. El modelo MEEGA+ \cite{meegaplus} busca evaluar también esta dimensión social. Para objeto de la evaluación de la calidad de juego, las preguntas relacionadas con este item se omitieron en el formulario.
 
-Una mejora observable es que el juego propuesto no aborda una componente social asociada al videojuego. Esta se descartó debido a dificultades en la aplicación de las pruebas de usuario y porque era complicado implementar, a nivel de diseño, una componente social justificada desde la perspectiva del usuario. El modelo MEEGA+ \cite{meegaplus} busca evaluar también esta componente social. Para objeto de la evaluación de la calidad de juego, las preguntas relacionadas con este item se omitieron en el formulario.
-
-No se puede garantizar la heterogeneidad de la muestra. Existe el sesgo del voluntario, que afecta según \cite{volunterBias}. El caso ideal implica una separación aleatoria en los cursos como parte de las actividades de la clase. No obstante, es probable que aún existan sesgos en los cursos debido a la selección de estudiantes de carreras asociadas a computación o informática. Se recomienda acotar el grupo solo a estudiantes de carreras asociadas a la informática. Por esta misma razón, también se aconseja acotar estos estudios únicamente a estudiantes de carreras relacionadas con STEM y agregar segmentación.
+Por otra parte, no se puede garantizar la heterogeneidad de la muestra. Existe el sesgo del voluntario, que afecta según \cite{volunterBias}. El caso ideal implica una separación aleatoria en los cursos como parte de las actividades de la clase. No obstante, es probable que aún existan sesgos en los cursos debido a la selección de estudiantes de carreras asociadas a computación o informática. Se recomienda acotar el grupo solo a estudiantes afines a la informática. Por esta misma razón, también se aconseja acotar estos estudios únicamente a estudiantes de carreras relacionadas con STEM y agregar segmentación.
 
 %  Por otra parte, existe el sesgo de novedad. % CITAR
 Además, según libros como \cite{Rogers2002InteractionDB}, es más efectivo realizar una prueba dos semanas después para medir aprendizajes efectivos. No obstante, esto fue difícil de realizar dadas las condiciones del trabajo, ya que conseguir voluntarios en un contexto donde los estudiantes prefieren dedicar su tiempo a preparar exámenes en lugar de participar en una actividad universitaria fue un desafío. Se sugiere buscar apoyo institucional y aumentar los incentivos a la participación, por ejemplo, mediante actividades que fomenten la comunidad al inicio del semestre académico.
 
-Por otro lado, el autor de este trabajo no es un diseñador de videojuegos y su principal énfasis está en la programación. Se destaca el rol y la importancia del diseño en los videojuegos, que deben ser atractivos y ofrecer mecánicas que recompensen al jugador, así como agregarle una dimensión social a través de un ranking, componentes cooperativas o competitivas. La narrativa tampoco está completamente desarrollada; no presenta una historia con un fin, desarrollo de personaje ni antagonista. Estos elementos suelen despertar más el interés del jugador \cite{Zea2014ModelingST, FrangoSilveira2019BuildingEN}.
+Finalmente, el autor de este trabajo no es un diseñador de videojuegos y su principal énfasis está en la programación. Se destaca el rol y la importancia del diseño en los videojuegos, que deben ser atractivos y ofrecer mecánicas que recompensen al jugador, así como agregarle una dimensión social a través de un ranking, componentes cooperativas o competitivas. La narrativa tampoco está completamente desarrollada; no presenta una historia con un fin, desarrollo de personaje ni antagonista. Estos elementos suelen despertar más el interés del jugador \cite{Zea2014ModelingST, FrangoSilveira2019BuildingEN}.
 
 
 \section{Trabajo futuro}
