--- a/Tesis/anexoF.tex
+++ b/Tesis/anexoF.tex
@@ -3,10 +3,11 @@
 \newgeometry{margin=0.5in}
 
 % 1.1
+Las siguientes tablas de comentarios muestran las respuestas del primer grupo, aquel que realizó la prueba académica.
 
 \begin{table}[h]
    \centering
-   \caption*{\textit{Comentarios del grupo que realizó la prueba económica frente a la pregunta: Nombra aspectos fuertes del juego}}
+   \caption*{\textit{Comentarios del grupo que realizó la prueba académica frente a la pregunta: Nombra aspectos fuertes del juego}}
    \begin{tabular}{|p{\linewidth}|}
    \hline
    \textbf{Comentario} \\\hline
@@ -98,9 +99,10 @@
 
 \begin{table}[h]
    \centering
-   \caption*{\textit{Comentarios a la pregunta: ``Por favor, indica uno o más aspectos fuertes del juego'' Grupo libre.}}
+   \caption*{\textit{Comentarios a la pregunta: ``Por favor, indica uno o más aspectos fuertes del juego''. Grupo libre.}}
    \begin{tabular}{|p{\linewidth}|}
    \hline % Linea horizontal inicial
+   \textbf{Comentario} \\\hline
    1. El ir paso a paso ejecutando los algoritmos ayuda mucho a entender cómo funcionan y cómo se diferencian entre sí. 2. El feedback visual de algunas cosas como la variable seleccionada o el estado actual del stack/queue que se está usando permite siempre saber lo que está ocurriendo, o incluso retomar la ejecución luego de perder la atención un momento. \\\hline
 
    La musica es bien llamativa y la tematica de la nave buscando los pandas rojos es atractiva. \\\hline
@@ -109,7 +111,8 @@
    
    Me gusta que te obligue a hacer las instrucciones una a una. \\\hline
 
-   El aspecto visual es bueno, la forma retro del código mostrado al lado derecho me gusta. \\\hline
+   El aspecto visual es bueno, la forma retro del código mostrado al lado derecho me gusta. \\
+
    \hline
    \end{tabular}
 \end{table}
@@ -124,6 +127,7 @@
    \caption*{\textit{Comentarios a la pregunta ``indica una o más sugerencias para mejorar el juego''. Grupo libre.}}
    \begin{tabular}{|p{\linewidth}|}
    \hline % Linea horizontal inicial
+   \textbf{Comentario} \\\hline
    1. El juego se beneficiaría de más feedback visual sobre las cosas seleccionadas/actuales en el algoritmo, como cuales son los nodos vecinos.
    2. Además, un nivel inicial con nodos ordenados de forma que las líneas no se sobrepongan puede ser útil.
    3. Para notar la diferencia entre BFS y DFS, tener una misma configuración de nodos puede ayudar a entender cómo ocurre que ciertos planetas se visitan antes que otros según el algoritmo que se esté usando.
@@ -171,4 +175,3 @@
 \end{table}
 
 \restoregeometry
-
