--- a/Tesis/bibliografia.bib
+++ b/Tesis/bibliografia.bib
@@ -103,7 +103,6 @@
   number="3",
   pages="e12994",
   keywords="video games; education, professional; review",
-  abstract="Background: There is a worldwide shortage of health workers, and this issue requires innovative education solutions. Serious gaming and gamification education have the potential to provide a quality, cost-effective, novel approach that is flexible, portable, and enjoyable and allow interaction with tutors and peers. Objective: The aim of this systematic review was to evaluate the effectiveness of serious gaming/gamification for health professions education compared with traditional learning, other types of digital education, or other serious gaming/gamification interventions in terms of patient outcomes, knowledge, skills, professional attitudes, and satisfaction (primary outcomes) as well as economic outcomes of education and adverse events (secondary outcomes). Methods: A comprehensive search of MEDLINE, EMBASE, Web of Knowledge, Educational Resources Information Centre, Cochrane Central Register of Controlled Trials, PsycINFO, and Cumulative Index to Nursing and Allied Health Literature was conducted from 1990 to August 2017. Randomized controlled trials (RCTs) and cluster RCTs were eligible for inclusion. Two reviewers independently searched, screened, and assessed the study quality and extracted data. A meta-analysis was not deemed appropriate due to the heterogeneity of populations, interventions, comparisons, and outcomes. Therefore, a narrative synthesis is presented. Results: A total of 27 RCTs and 3 cluster RCTs with 3634 participants were included. Two studies evaluated gamification interventions, and the remaining evaluated serious gaming interventions. One study reported a small statistically significant difference between serious gaming and digital education of primary care physicians in the time to control blood pressure in a subgroup of their patients already taking antihypertensive medications. There was evidence of a moderate-to-large magnitude of effect from five studies evaluating individually delivered interventions for objectively measured knowledge compared with traditional learning. There was also evidence of a small-to-large magnitude of effect from 10 studies for improved skills compared with traditional learning. Two and four studies suggested equivalence between interventions and controls for knowledge and skills, respectively. Evidence suggested that serious gaming was at least as effective as other digital education modalities for these outcomes. There was insufficient evidence to conclude whether one type of serious gaming/gamification intervention is more effective than any other. There was limited evidence for the effects of serious gaming/gamification on professional attitudes. Serious gaming/gamification may improve satisfaction, but the evidence was limited. Evidence was of low or very low quality for all outcomes. Quality of evidence was downgraded due to the imprecision, inconsistency, and limitations of the study. Conclusions: Serious gaming/gamification appears to be at least as effective as controls, and in many studies, more effective for improving knowledge, skills, and satisfaction. However, the available evidence is mostly of low quality and calls for further rigorous, theory-driven research. ",
   issn="1438-8871",
   doi="10.2196/12994",
   url="http://www.ncbi.nlm.nih.gov/pubmed/30920375"
@@ -468,4 +467,31 @@ note = {Accessed: 2023-11-18}
   booktitle={International Visual Informatics Conference},
   year={2011},
   url={https://api.semanticscholar.org/CorpusID:27405579}
+}
+
+@article{HowGamesComputingEducationEvaluated,
+  title={How games for computing education are evaluated? A systematic literature review},
+  author={Giani Petri and Christiane Gresse von Wangenheim},
+  journal={Comput. Educ.},
+  year={2017},
+  volume={107},
+  pages={68-90},
+  url={https://api.semanticscholar.org/CorpusID:26255157}
+}
+
+@article{CalderonRuizReviewSeriousGamesEvaluation,
+  title={A systematic literature review on serious games evaluation: An application to software project management},
+  author={{Alejandro Calderón and Mercedes Ruiz}},
+  journal={Comput. Educ.},
+  year={2015},
+  volume={87},
+  pages={396-422},
+  url={https://api.semanticscholar.org/CorpusID:29121845}
+}
+
+@inproceedings{ReviewGamesTeachingComputing,
+  title={{Games for Teaching Computing in Higher Education – A Systematic Review}},
+  author={Paulo Eduardo Battistella and Christiane Gresse von Wangenheim},
+  year={2016},
+  url={https://api.semanticscholar.org/CorpusID:64431187}
 }
