--- a/Tesis/intro.tex
+++ b/Tesis/intro.tex
@@ -2,26 +2,25 @@
 
 Esta investigación tiene como objetivo transformar las instrucciones de algoritmos de grafos en una representación visual e interactiva a través de un videojuego. Esta representación se destina a estudiantes de informática, con lo que se puede evaluar si el uso de herramientas interactivas con feedback visual mejora tanto el aprendizaje como la motivación.
 
-El trabajo implica presentar a estudiantes de ciencias de la computación un videojuego que exhiba grafos. En este juego, el usuario debe ejecutar las instrucciones de los algoritmos con la asistencia de elementos visuales y auditivos.
+El trabajo implica presentar a estudiantes de ciencias de la computación (CS) un videojuego que exhiba grafos. En este juego, el usuario debe ejecutar las instrucciones de los algoritmos con la asistencia de elementos visuales y auditivos.
 
 El objetivo de esta investigación de tesis es identificar posibles diferencias en los niveles de motivación y comprensión de los algoritmos entre los estudiantes. Esto se medirá mediante una prueba que evaluará su conocimiento de los algoritmos de grafos.
 
-El público objetivo son estudiantes de primer año de ciencias de la computación (CS), aunque también es aplicable a estudiantes de ingeniería con conocimientos de programación. El requisito principal es que no hayan estudiado grafos previamente.
+El público objetivo son estudiantes de primer año de ciencias de la computación, aunque también es aplicable a estudiantes de ingeniería con conocimientos de programación. El requisito principal es que no hayan estudiado grafos previamente.
 
 \section{Motivación}
 
 La adopción de tecnologías digitales ha agilizado el acceso al conocimiento, permitiendo que estudiantes previamente excluidos ahora puedan acceder a la educación. Sin embargo, la educación en línea presenta desafíos propios \cite{UN2023ImpactDigitalTechnologies}. En este contexto, es crucial buscar metodologías que aceleren el aprendizaje con tecnologías adaptables, escalables y eficientes.
 
-Se ha afirmado popularmente que la capacidad de atención de forma prolongada ha disminuido en las nuevas generaciones. Sin embargo, hay estudios que contradicen estas afirmaciones \cite{The_Role_of_Attention_Learning_Digital_Age}, indicando que las habilidades cognitivas de los estudiantes han cambiado, pero no necesariamente empeorado. Existen términos como ``doomsters'' y ``boosters'' \cite{Selwyn2014LookingF}, para descibrir la polarización entre estas miradas con respecto a la tecnología.
+Se postula popularmente que la capacidad de atención de forma prolongada ha disminuido en las nuevas generaciones. Hay estudios que contradicen estas afirmaciones \cite{The_Role_of_Attention_Learning_Digital_Age}, indicando que las habilidades cognitivas de los estudiantes han cambiado, pero no necesariamente empeorado. Existen términos como ``doomsters'' y ``boosters'' \cite{Selwyn2014LookingF}, para descibrir la polarización entre estas miradas con respecto a la tecnología.
 
 En lo que sí existe consenso, es que la tecnología y su portabilidad ha incrementado la cantidad de distracciones a las que se exponen
 los estudiantes \cite{Zimmerman2011HandbookOS, Wang2022ComprehensivelySummarizeDistractions}. Se le llama multitasking al acto de intentar realizar más de una tarea a la vez. Se ha demostrado que esta práctica disminuye la productividad y el aprendizaje, aunque las personas creen que pueden hacer más de una cosa a la vez \cite{Domoff2019AddictivePU}.  Con la popularización de los smartphones y las clases en línea, el multitasking -desde hacer labores del hogar hasta sacar el celular y revisar alguna aplicación- durante clases se ha incrementado \cite{Wang2022ComprehensivelySummarizeDistractions}.
 
 Una forma de distracción reconocida en la literatura es la interferencia motivacional, propuesta y explicada por Fries y Dietz \cite{Fries2007LearningMotivationalInterference}. Esta señala que la motivación respecto a la clase disminuye debido a la presencia de tentaciones más atractivas para la atención, como los smartphones. En este contexto, donde los estudiantes se ven tentados a distraerse, es importante buscar formas de mantenerlos motivados y enfocados durante las clases.
-
 Los videjuegos educativos destacan porque tienen potencial como una herramienta complementaria para la enseñanza, evaluación y entretemiento para los estudiantes. Entre sus beneficios se destaca la motivación. En \cite{Bisson1996FunInLEarningPedagogicalRole} se indica que para disfrutar una actividad, primero se debe permitir a la mente de un individuo percibir tal actividad como motivante. 
 
-Yu \cite{Yu2020TheEffectsOfEducationGames} hace una revisión sistemática de la literatura sobre los efectos de los videojuegos educativos en el aprendizaje de los estudiantes y su motivación. En este estudio, relativo a la motivación, se señala que el uso de videojuegos educativos como complemento afecta positivamente la motivación e incluso los logros académicos, pero también señala que han habido estudios que contradicen esta afirmación, por lo que se requiere más investigación en el área.
+Yu hace una revisión sistemática de la literatura \cite{Yu2020TheEffectsOfEducationGames} sobre los efectos de los videojuegos educativos en el aprendizaje de los estudiantes y su motivación. En este estudio, relativo a la motivación, se señala que el uso de videojuegos educativos como complemento afecta positivamente la motivación e incluso los logros académicos, pero también señala que han habido estudios que contradicen esta afirmación, por lo que se requiere más investigación en el área.
 
 En el estudio mencionado, se asevera que el diseño del videojuego afecta totalmente el resultado final. Por ejemplo, los juegos de acción o realidad aumentada tenían mejores resultados que un juego tradicional, y que las mecánicas, elementos visuales y narrativos tienen un efecto significativo en el resultado final.
 
@@ -38,7 +37,6 @@ En la mayoría de los estudios citados previamente se indica que falta tener cer
 
 % Indicar aquí que queremos medir aprendizaje y motivación
 El objetivo principal de este trabajo es medir el aprendizaje y la motivación de los estudiantes de computación al utilizar un videojuego educativo para instruir en algoritmos vinculados a grafos, incorporando las características expuestas en este documento.
-
 
 \section{Objetivos Específicos}
 
@@ -58,7 +56,7 @@ El objetivo principal de este trabajo es medir el aprendizaje y la motivación d
 
 
 
-% \section{Marco teórico}
+\section{Marco teórico}
 
 % All statistical model needs an assumption or a set of assumption to work correctly. As mention
 % before, IRT unidimensional dichotomous models need to hold three principal assumptions:
@@ -70,4 +68,39 @@ El objetivo principal de este trabajo es medir el aprendizaje y la motivación d
 % When assumption (ii) does not hold, multidimensional dichotomous and polytomous IRT
 % models (MIRT) are appropriate, which allows more than one latent trait dimension. All these
 % details are explained in the next subsections.
+\subsection{Metodología de trabajo para validar videojuegose educativos}
+
+Petri y Gresse von Wangenheim en \cite{HowGamesComputingEducationEvaluated}, antes de crear el modelo MEEGA+ cuya publicación sucedió el 2018 \cite{meegaplus}, hacen una revisión de literatura de cómo son evaluados los videojuegos educativos relacionados con la computación a partir de una muestra de 3617 artículos. Clasifica los estudios como verdaderos estudios, quasi-experimentales, no experimentales y ad-hoc según la metodología empleada.
+
+% f the
+% study uses either multiple groups or multiple moments of measurement, yet no random assignment, the study is classified as
+% quasi-experimental. If the study does not use multiple groups, but is conducted in a systematic way, such as case studies (Yin,
+% 2009), the study is classified as non-experimental. Studies executed in an unsystematic manner, without an explicit definition
+% of the study and the measurement beforehand, are classified as ad-hoc studies.
+
+Aquellos estudios que tenían múltiples grupos con asignación aleatoria eran considerados experimentales. Si el estudio usa múltiples grupos o múltiples momentos de medida sin asignación aleatoria, es considerado cuasi-experimental. Si no se emplean múltiples grupos, pero se hace de una forma sistemática con estudios de casos, es no experimental. Estudios que no son llevados de forma sistemática, sin una definición explícita del estudio y la forma de medirlo de antemano, son clasificados como estudios ad-hoc.
+
+En una reseña, Calderón y Ruiz \cite{CalderonRuizReviewSeriousGamesEvaluation}, los autores identifican que la mayoría de los videojuegos educativos son evaluados en términos de aprendizaje, usabilidad y experiencia de usuario. Además, indican que la mayoría de los estudios se realizaron de una forma ad-hoc, sin sistematización. Este trabajo asevera que la mayoría de los estudios realizados utilizan cuestionarios y entrevistas como métodos de validación de resultados. Por otra parte, se crea una categorización de características que indican calidad en un juego, que posteriormente son utilizadas por \cite{meegaplus} en su cuestionario. Ejemplos de items evaluados son: Diseño de juego, satisfacción del usuario, usabilidad, motivación, resultados del aprendizaje, entre otros.
+
+En su reseña sobre videojuegos serios, Calderón y Ruiz también tabulan los tipos de procedimientos utilizados para validar estos trabajos, identificando tres tipos: 1) simple; 2) pre/post y 3) pre/post/post. 1) En el primero, los autores llevan a cabo una sesión con un juego serio, después de jugarlo, se aplican los mecanismos de evaluación a los jugadores; 2) En el pre/post, la prueba tiene dos etapas de evaluación. Uno antes del juego serio, y otro después, de manera que se establece el conocimiento anterior a la prueba; 3) Para el caso pre/post/post se hace, además de las pruebas pre y post, una prueba posterior semanas después para analizar los niveles de retención \cite{CalderonRuizReviewSeriousGamesEvaluation}. Respecto a las frencuencias, 50 de 89 de estos estudios se hicieron con una metodología simple y el 55\% lo hizo con tamaños muestrales inferiores a 40.
+
+En la reseña de literatura \cite{ReviewGamesTeachingComputing} se analizan exclusivamente videojuegos educativos relacionados a computación. 
+ 
+
+
+This procedure is characterized by two stages of evaluation. One before using the serious game and another one after. This kind of procedure is usually used by authors who evaluated the level of knowledge acquisition that players acquired using the serious game
+
+z
+
+
+\subsection{Teoría de respuesta al ítem, Item Response Theory o IRT}
+
+
+
+\subsection{Motores de videojuegos: Godot}
+
+
+
+
+
 
