--- a/Tesis/main.tex
+++ b/Tesis/main.tex
@@ -39,7 +39,7 @@
 
 \begin{resumen}
 
-Los videojuegos educativos son reconocidos como herramientas motivadoras para enseñar y entretener a los estudiantes. En este proyecto, se presenta IGASCE, un videojuego educativo diseñado para enseñar conceptos de grafos y los algoritmos BFS y DFS. Se utilizó la metodología MEEGA+ \cite{meegaplus} para evaluar la calidad de la aplicación, solicitando a dos grupos que probaran el juego y respondieran cuestionarios. El primero realizó una prueba académica después del cuestionario. Este grupo, sin conocimiento previo de grafos, obtuvo una puntuación perfecta (n=15) después de haber probado el videojuego y calificó al juego con $\theta = 0.613$, que corresponde según MEEGA+ a un juego bueno, pero no excelente \cite{MeegaPlusManual}. El segundo grupo, aquel que no realizó la prueba académica, dio una puntuación de $\theta = 0.616$. Se concluye que el juego facilitó el aprendizaje de los estudiantes sobre grafos y los algoritmos BFS y DFS. La percepción de los usuarios señaló posibles áreas de mejora en usabilidad, interfaz y gamificación. La arquitectura de software desarrollada permite la reutilización para otros algoritmos y estructuras de datos. Dado que los estudios con videojuegos son cualitativos y con muestras reducidas, se proporcionan pautas para obtener resultados más precisos en futuras investigaciones.
+Los videojuegos educativos son reconocidos como herramientas motivadoras para enseñar y entretener a los estudiantes. En este proyecto, se presenta IGASCE, un videojuego educativo diseñado para enseñar conceptos de grafos y los algoritmos BFS y DFS. Se utilizó la metodología MEEGA+ \cite{meegaplus} para evaluar la calidad de la aplicación, solicitando a dos grupos que probaran el juego y respondieran cuestionarios. El primero realizó una prueba académica después del cuestionario. Este grupo, sin conocimiento previo de grafos, obtuvo una puntuación perfecta (n=15) después de haber probado el videojuego y calificó al juego con $\theta = 0.613$, que corresponde según MEEGA+ a un juego bueno, pero no excelente \cite{MeegaPlusManual}. El segundo grupo, aquel que no realizó la prueba académica, dio una puntuación de $\theta = 0.616$. Se concluye que el juego facilitó el aprendizaje de los estudiantes sobre grafos y los algoritmos BFS y DFS. La percepción de los usuarios señaló posibles áreas de mejora en usabilidad, interfaz y gamificación. La arquitectura de software desarrollada permite la reutilización para otros algoritmos y estructuras de datos. Además, se proporcionan pautas para obtener resultados más precisos en futuras investigaciones.
 
 
 \end{resumen}
@@ -47,7 +47,7 @@ Los videojuegos educativos son reconocidos como herramientas motivadoras para en
 
 \begin{abstract}
 
-Educational video games are acknowledged as motivating tools for teaching and entertaining students. In this project, IGASCE is introduced, an educational video game designed to impart concepts of graphs and BFS and DFS algorithms. The MEEGA+ methodology \cite{meegaplus} was employed to assess the quality of the application, involving two groups to play the game and respond to questionnaires. The first group underwent an academic test following the questionnaire. This group, unfamiliar with graph concepts, achieved a perfect score (n=15) after testing the video game and rated it with $\theta = 0.613$, which, according to MEEGA+ \cite{MeegaPlusManual}, corresponds to a good but not excellent game. The second group, which did not take the academic test, gave a score of $\theta = 0.616$. It is concluded that the game facilitated student learning about graphs and BFS and DFS algorithms. User perception indicated potential areas for improvement in usability, interface, and gamification. The software architecture developed allows for reuse with other algorithms and data structures. Given that video game studies are qualitative with small sample sizes, guidelines are provided for obtaining more precise results in future research.
+Educational video games are acknowledged as motivating tools for teaching and entertaining students. In this project, IGASCE is introduced, an educational video game designed to impart concepts of graphs and BFS and DFS algorithms. The MEEGA+ methodology \cite{meegaplus} was employed to assess the quality of the application, involving two groups to play the game and respond to questionnaires. The first group underwent an academic test following the questionnaire. This group, unfamiliar with graph concepts, achieved a perfect score (n=15) after testing the video game and rated it with $\theta = 0.613$, which, according to MEEGA+ \cite{MeegaPlusManual}, corresponds to a good but not excellent game. The second group, which did not take the academic test, gave a score of $\theta = 0.616$. It is concluded that the game facilitated student learning about graphs and BFS and DFS algorithms. User perception indicated potential areas for improvement in usability, interface, and gamification. The software architecture developed allows for reuse with other algorithms and data structures. At the end, guidelines are provided for obtaining more precise results in future research.
 
 \end{abstract}
 
@@ -62,7 +62,7 @@ A mi abuelo, que siempre me apoyó en mis estudios.
 
     A mis profesores por su ayuda, por ayudarme a crecer no solo como profesional y como estudiante, sino también como persona. No sería quien soy de no ser por ustedes. 
 
-    Gracias a mis amistades, por su apoyo, pero también a quienes me pidieron apoyo, porque en la ayuda mutua es donde surgen las mejores ideas. Gracias Alfonso, Gabriel, Ricardo, Felipes, Jeremy, Nancy, Isa, Enri, Fernanda, Dani, Nico, Lucas, Mati, Martín, Bea, Tommy.
+    Gracias a mis amistades, por su apoyo, pero también a quienes me pidieron apoyo, porque en la ayuda mutua es donde surgen las mejores ideas. Gracias Alfonso, Gabriel, Ricardo, Felipes, Jeremy, Nancy, Isa, Enri, Fernanda, Mario, Cisneros, Dani, Nico, Lucas, Mati, Martín, Bea, Tommy, Diego y Vale.
 
     Gracias a mis colegas, que me ayudaron sin esperar nada a cambio. Me dieron excelentes ideas, jamás se me hubieran ocurrido.
 
@@ -99,5 +99,7 @@ A mi abuelo, que siempre me apoyó en mis estudios.
 \input{anexoD.tex}
 \input{anexoE.tex}
 \input{anexoF.tex}
+\input{anexoG.tex}
+
 % \end{appendices}
 \end{document}
